# hakshell

./: .gitignore  .hspec  README.md  hakshell.cabal  package.yaml  repl.sh
src/: Hakshell.hs
src/Hakshell/: Find.hs  GapBuffer.hs  Pipe.hs  Process.hs  String.hs  Struct.hs  System.hs  Text.hs  TextEditor.hs  UTFUnit.hs
src/Hakshell/TextEditor/: FoldMap.hs  LineBreaker.hs  Parser.hs
tests/: HakshellTests.hs
