-- "hakshell.cabal" build configuration for this project.
--
-- Copyright (C) 2017-2018  Ramin Honary.
--
-- "hakshell" is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License (AGPL)
-- as published by the Free Software Foundation.
--
-- "hakshell" is distributed in the hope that it will be useful, but
-- WITHOUT ANY WARRANTY; without even the implied warranty of
-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
-- See the GNU Affero General Public License for more details.
--
-- You should have received a copy of the GNU General Public License
-- along with this program (see the file called "LICENSE"). If not, see
-- <http://www.gnu.org/licenses/agpl.html>.

NAME:           hakshell
VERSION:        0.1.0.0
AUTHOR:         Ramin Honary
COPYRIGHT:      (C) 2017-2018 Ramin Honary, all rights reserved.
MAINTAINER:     RaminHAL9001@gmail.com
HOMEPAGE:       https://github.com/RaminHAL9001/hakshell
LICENSE:        AGPL
LICENSE-FILE:   LICENSE
BUILD-TYPE:     Simple
CABAL-VERSION:  >= 1.18

CATEGORY:       Shell
SYNOPSIS:       "Haskell Applets" provides an event handler and a canvas for building simple GUI apps.

DESCRIPTION:
    .
    
    This is my attempt at creating a set of functions that can be
    imported into GHCi to turn GHCi into a shell that is nearly as
    useful as using Bash (sometimes called the UNIX/Linux command
    line).

    .

    It is inspired by Turtle Shell, but with a different goal. The
    goal of Turtle Shell is to make it easier to write Bash-like shell
    scripts in Haskell. The goal of Hakshell is to actually be used as
    a Bash-like shell within a Read-Eval-Print Loop (REPL), and it
    does this by extending an ordinary GHCi session with shell-like
    capabilities, namely launching foreground and background processes
    and process pipelines.

    .

Library {

  HS-SOURCE-DIRS:    src
  DEFAULT-LANGUAGE:  Haskell2010

  GHC-OPTIONS:  -Wall
    -fno-warn-name-shadowing
    -fno-warn-unused-do-bind

  EXPOSED-MODULES:
    Hakshell

  BUILD-DEPENDS:
    containers           >=0.5.10.0 && <0.7.0.0,
    directory            >=1.3.0.0  && <1.4.0.0,
    filepath             >=1.4.0.0  && <1.5.0.0,
    lens                 >=4.0.0.0  && <5.0.0.0,
    linear               >=1.20.0   && <2.0.0.0,
    mtl                  >=2.2.0    && <=2.2.2,
    process              >=1.6.0.0  && <=1.7.0.0,
    semigroups           >=0.16.0   && <0.19.0,
    time                 >=1.4.0.0  && <=1.9.1,
    text                 >=1.1.1.4  && <2.0.0.0,
    transformers         >=0.1.1    && <0.6.0,
    unix                 >=2.7.0.0  && <2.8.0.0,
    vector               >=0.12.0.0 && <0.13.0.0,
    base                 >=4.7      && <4.12

  DEFAULT-EXTENSIONS:
    DeriveDataTypeable
    DeriveFunctor
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    ImplicitParams
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
}
