cabal-version: 1.12

name:               hakshell
version:            0.1.0.0
synopsis:           Import Hakshell in GHCI to more easily launch processes, manipulate the filesystem.
category:           Shell
homepage:           https://github.com/RaminHAL9001/happlets#readme
bug-reports:        https://github.com/RaminHAL9001/happlets/issues
author:             Ramin Honary
maintainer:         ramin.honary@gmail.com
copyright:          2019 Ramin Honary, all rights reserved
license:            AGPL
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/RaminHAL9001/happlets

library
  default-language: Haskell2010
  hs-source-dirs:
    src
  exposed-modules:
    Hakshell
    Hakshell.GapBuffer
    Hakshell.String
    Hakshell.Struct
    Hakshell.System
    Hakshell.TextEditor
    Hakshell.TextEditor.Parser
    Hakshell.UTFUnit
    Hakshell.Pipe
    Hakshell.Find
  other-modules:
    Paths_hakshell
  default-extensions:
    DeriveDataTypeable
    DeriveFunctor
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImplicitParams
    LambdaCase
    MultiParamTypeClasses
    NoMonomorphismRestriction
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
  ghc-options:
    -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind -O0
  build-depends:
      base
    , bytestring
    , containers
    , directory
    , filepath
    , lens
    , linear
    , mtl
    , parsers
    , primitive
    , process
    , semigroups
    , time
    , transformers
    , unix
    , utf8-string
    , vector

test-suite HakshellTests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          HakshellTests.hs
  other-modules:
    Paths_hakshell
  default-extensions:
    DeriveDataTypeable
    DeriveFunctor
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImplicitParams
    LambdaCase
    MultiParamTypeClasses
    NoMonomorphismRestriction
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
  ghc-options:
     -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind -threaded
  build-depends:
      base
    , bytestring
    , containers
    , directory
    , filepath
    , hakshell
    , hspec
    , lens
    , linear
    , mtl
    , parsers
    , primitive
    , process
    , semigroups
    , time
    , transformers
    , unix
    , utf8-string
    , vector
